--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -133,6 +133,14 @@ h1,h2,h3,h4,h5{
   top: 25%;
   right: 23%;
 }
+
+.banner>.links{
+  font-size: 20px;
+  position: absolute;
+  top: 70%;
+  align-items: center;
+}
+
 .banner>.centre{
   font-size: 40px;
   font-weight: bold;
@@ -144,6 +152,11 @@ h1,h2,h3,h4,h5{
   justify-content: center;
   flex-direction: column;
 }
+
+.banner .links{
+  color: #FFF !important;
+}
+
 .banner>.text>.el-button{
   cursor: pointer;
   position: absolute;
