--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -7,134 +7,139 @@ body {
   font-family: Helvetica Neue, Helvetica, PingFang SC, Hiragino Sans GB,
     Microsoft YaHei, SimSun, sans-serif !important;
 }
-a{
+a {
   color: #333;
   text-decoration: none;
 }
-p,ul{
+p,
+ul {
   list-style: none;
   padding: 0;
   margin: 0;
 }
-h1,h2,h3,h4,h5{
+h1,
+h2,
+h3,
+h4,
+h5 {
   margin: 0;
 }
-.main{
+.main {
   width: 100%;
   min-width: 1024px;
 }
-.main>.container{
+.main > .container {
   width: 100%;
   position: fixed;
   top: 0;
   z-index: 1;
 }
-.main>.container.move{
-  background-color: #FFF;
-  box-shadow: 0 2px 12px 0 rgba(0,0,0,.1);
+.main > .container.move {
+  background-color: #fff;
+  box-shadow: 0 2px 12px 0 rgba(0, 0, 0, 0.1);
 }
-.header{
+.header {
   width: 1024px;
   margin: auto !important;
   z-index: 1;
 }
-.header,.header>div{
+.header,
+.header > div {
   height: 80px;
   line-height: 80px;
   overflow: hidden;
 }
-.web-logo{
+.web-logo {
   height: 45px;
   vertical-align: middle;
 }
-.header .h-menu{
+.header .h-menu {
   float: right;
   display: flex;
 }
-.h-menu>li{
+.h-menu > li {
   padding: 0 10px;
 }
-.h-menu>li>a{
+.h-menu > li > a {
   text-decoration: none;
-  color: #FFF;
+  color: #fff;
 }
 
-.main>.container.move .h-menu>li>a{
+.main > .container.move .h-menu > li > a {
   color: #333;
 }
-.h-menu>li>a:hover{
+.h-menu > li > a:hover {
   color: #dd4f05 !important;
 }
 
-.footer{
-  background-color:#414B56;
+.footer {
+  background-color: #414b56;
   padding: 20px 10px;
-  color: #FFF;
+  color: #fff;
 }
-.footer>div{
+.footer > div {
   margin-bottom: 40px;
 }
-.footer>div:last-child{
+.footer > div:last-child {
   margin: 0;
 }
-.footer-logo{
+.footer-logo {
   text-align: center;
 }
-.footer-logo>img{
+.footer-logo > img {
   height: 60px;
 }
-.footer-title{
+.footer-title {
   font-size: 16px;
   font-weight: bold;
 }
-.footer-title:hover{
+.footer-title:hover {
   color: #dd4f05;
 }
-.footer-item{
+.footer-item {
   font-size: 14px;
   margin-top: 20px;
 }
-.footer-item>a{
+.footer-item > a {
   display: table;
   cursor: pointer;
-  color: #FFF;
+  color: #fff;
 }
-.footer-item>a.highlight:hover{
+.footer-item > a.highlight:hover {
   color: #dd4f05;
 }
-.widget{
+.widget {
   overflow: hidden;
 }
-.widget>.widget-lable{
+.widget > .widget-lable {
   float: left;
   width: 42px;
 }
-.copyright{
+.copyright {
   text-align: center;
   font-size: 14px;
 }
 
 /* bease end */
 
-.banner{
+.banner {
   height: 400px;
   position: relative;
 }
-.banner>.text{
+.banner > .text {
   font-size: 60px;
-  color: #FFF;
+  color: #fff;
   font-weight: lighter;
   position: absolute;
   top: 25%;
   right: 23%;
 }
 
-
-.banner>.centre{
+.banner > .centre {
   font-size: 40px;
   font-weight: bold;
-  color: #FFF;
-  text-shadow: 0.08em 0.08em 0.1em #DD4F05;
+  color: #fff;
+  text-shadow: 0.08em 0.08em 0.1em #dd4f05;
   height: 100%;
   display: flex;
   align-items: center;
@@ -142,79 +147,81 @@ h1,h2,h3,h4,h5{
   flex-direction: column;
 }
 
-.links{
+.links {
   font-size: 20px;
   margin: 0;
   text-shadow: none;
   font-weight: normal;
 }
 
-.banner>.text>.el-button{
+.banner > .text > .el-button {
   cursor: pointer;
   position: absolute;
   top: 120%;
   right: 76%;
-  border: 1px solid #E6A23C;
-  background-color: #DD4F05;
-  color: #FFF;
+  border: 1px solid #e6a23c;
+  background-color: #dd4f05;
+  color: #fff;
 }
 /* 模仿a标签样式 */
-.link{
-  color: #1896CD;
+.link {
+  color: #1896cd;
   font-size: 16px;
   margin-top: 10px;
   cursor: pointer;
   display: inline-block;
 }
 
-.link:hover{
+.link:hover {
   text-decoration: underline;
 }
 
-.background{
+.background {
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
 }
 
-.el-button--primary{
-  background-color: #1896CD;
-  border-color: #1896CD;
+.el-button--primary {
+  background-color: #1896cd;
+  border-color: #1896cd;
 }
 
-.el-button-green{
-  background-color: #81AB6E;
-  color: #FFF;
+.el-button-green {
+  background-color: #81ab6e;
+  color: #fff;
 }
-.el-button-green:hover,.el-button-green:focus{
-  color: #FFF;
+.el-button-green:hover,
+.el-button-green:focus {
+  color: #fff;
   background-color: #9aca85;
 }
 
-.el-button-DD4F05{
-  border: 1px solid #DD4F05;
-  background-color: #DD4F05;
-  color: #FFF;
+.el-button-DD4F05 {
+  border: 1px solid #dd4f05;
+  background-color: #dd4f05;
+  color: #fff;
 }
-.el-button-DD4F05:hover,.el-button-DD4F05:focus{
+.el-button-DD4F05:hover,
+.el-button-DD4F05:focus {
   border: 1px solid rgb(228, 114, 53);
-  color: #FFF;
+  color: #fff;
   background-color: rgb(228, 114, 53);
 }
 
 /* 每一块的公共样式 */
-[class^=content-]{
+[class^="content-"] {
   padding: 60px 0;
 }
-[class^=content-]>.title,
-[class^=content-]>.slogan{
+[class^="content-"] > .title,
+[class^="content-"] > .slogan {
   font-size: 32px;
   font-weight: bold;
   text-align: center;
-  color: #FB753E;
+  color: #fb753e;
   margin-bottom: 45px;
 }
-[class^=content-]>.title.left{
+[class^="content-"] > .title.left {
   text-align: left;
   margin-left: auto;
   margin-right: auto;
@@ -223,85 +230,80 @@ h1,h2,h3,h4,h5{
 /* [class^=content-]>.title{
   font-size: 32px;
 } */
-[class^=content-]>.slogan{
+[class^="content-"] > .slogan {
   font-size: 40px;
   font-weight: lighter;
 }
-[class^=content-]>.container{
+[class^="content-"] > .container {
   line-height: 150%;
   width: 70%;
   margin: auto;
 }
-[class^=content-]>.container>p{
+[class^="content-"] > .container > p {
   margin-bottom: 30px;
 }
-[class^=content-]>.container>p:last-child{
-  /* margin-bottom: 0; */
-}
-
 /* 图片详情 */
-.background-fafafc{
+.background-fafafc {
   background-color: #fafafc;
 }
-.content-10{
+.content-10 {
   text-align: center;
   padding: 0;
 }
-.content-10>.img-info{
+.content-10 > .img-info {
   max-width: 1280px;
 }
 
 /* 文本1 */
-.describe>.text-1{
-  color: #5D5D5D;
+.describe > .text-1 {
+  color: #5d5d5d;
 }
-.describe>.text-1>p,
-.describe>.text-1>div{
+.describe > .text-1 > p,
+.describe > .text-1 > div {
   margin-bottom: 30px;
 }
-.describe>.text-1>p:last-child{
+.describe > .text-1 > p:last-child {
   margin-bottom: 0;
 }
-.describe>hr{
+.describe > hr {
   margin: 35px 0;
-  border-color: #FBA275;
+  border-color: #fba275;
   border-style: solid;
 }
 /* 文本2 */
 
-
-.ul-style-1{
+.ul-style-1 {
   list-style: disc;
   padding-left: 25px;
-  color: #FF6A24;
+  color: #ff6a24;
   font-size: 20px;
   font-weight: bold;
 }
-.ul-style-1>li{
+.ul-style-1 > li {
   margin-bottom: 30px;
 }
-.ul-style-2>li>span,
-.ul-style-1>li>span{
+.ul-style-2 > li > span,
+.ul-style-1 > li > span {
   color: #333;
   font-size: 18px;
 }
-.ul-style-2{
+.ul-style-2 {
   list-style: disc;
   padding-left: 25px;
-  color: #FF6A24;
+  color: #ff6a24;
   font-size: 20px;
 }
-.ul-style-2 span.lable{
+.ul-style-2 span.lable {
   font-weight: bold;
 }
 .ul-style-2 li,
-.ul-style-3 li{
+.ul-style-3 li {
   margin-bottom: 30px;
 }
 
-.ul-style-3 .lable::before{
-  background-color: #FBA275;
-  content: ' ';
+.ul-style-3 .lable::before {
+  background-color: #fba275;
+  content: " ";
   font-size: 100px;
   width: 5px;
   height: 20px;
@@ -309,93 +311,93 @@ h1,h2,h3,h4,h5{
   vertical-align: middle;
   margin-right: 10px;
 }
-.ul-style-3 .text{
+.ul-style-3 .text {
   padding-left: 15px;
 }
-.content-6 .container{
+.content-6 .container {
   text-align: center;
 }
-.content-6 .container>img{
+.content-6 .container > img {
   max-width: 1000px;
 }
-.content-8{
+.content-8 {
   margin-top: -5px;
 }
-.content-8 .list{
+.content-8 .list {
   margin-top: 50px;
 }
-.content-8 .list>p{
+.content-8 .list > p {
   margin-bottom: 5px;
 }
-.content-8 .list>p>span{
+.content-8 .list > p > span {
   font-weight: bold;
 }
 
 /* 播放视频窗口 */
-.video-dialog .el-dialog__body{
+.video-dialog .el-dialog__body {
   padding: 0;
 }
-.video-dialog .el-dialog__body video{
+.video-dialog .el-dialog__body video {
   width: 100%;
   height: 500px;
 }
 
-.content-9{
+.content-9 {
   background-color: #fafafc;
 }
-.content-9 .container>.item,
-.content-9 .container>.item>.addr{
+.content-9 .container > .item,
+.content-9 .container > .item > .addr {
   margin-bottom: 30px;
 }
-.content-9 .container>.item>.addr:last-child{
+.content-9 .container > .item > .addr:last-child {
   margin-bottom: 0;
 }
 
-.el-dialog{
+.el-dialog {
   width: 750px;
 }
 
-.content-menu .item{
+.content-menu .item {
   margin-bottom: 20px;
 }
-.content-menu .item>.max-title{
-  color: #DD4F05;
+.content-menu .item > .max-title {
+  color: #dd4f05;
   font-size: 36px;
   line-height: initial;
-  background-color: #F9FAFC;
+  background-color: #f9fafc;
   padding: 20px 25px;
 }
-.content-menu .item>.min-title{
+.content-menu .item > .min-title {
   padding: 20px 25px;
-  border-bottom: 1px solid #FCFCFC;
+  border-bottom: 1px solid #fcfcfc;
   display: block;
   font-weight: bold;
   cursor: pointer;
 }
-.content-menu .item>.min-title:hover{
+.content-menu .item > .min-title:hover {
   color: #dd4f05;
 }
-.content-menu .item>.min-title:last-child{
+.content-menu .item > .min-title:last-child {
   border-bottom: none;
 }
 
-.common-background{
-  background-color: #F9FAFC;
+.common-background {
+  background-color: #f9fafc;
 }
 
-.common-background-2{
-  background-color: #FFFFFF;
+.common-background-2 {
+  background-color: #ffffff;
 }
 
-.content-11>.container>h3{
+.content-11 > .container > h3 {
   text-align: left;
 }
-.content-11>.container{
+.content-11 > .container {
   text-align: center;
   max-width: 1000px;
 }
 
-.anchor-point{
+.anchor-point {
   margin-top: -90px;
   float: left;
 }
